--- a/template/index.html
+++ b/template/index.html
@@ -91,7 +91,7 @@
                         <input type="text" name="Present_Price" id="Present_Price" placeholder="Enter present price in lacs 3.4" class="text-muted mb-2" required><br>
 
                         <label for="">Kilometers Drived</label><br>
-                        <input type="text" name="Kms_Driven" id="Kms_Driven" placeholder="24000" class="text-muted mb-2" required><br>
+                        <input type="text" name="Kms_Driven" id="Kms_Driven" placeholder="Enter Km Drived like 24000" class="text-muted mb-2" required><br>
                         
                         <label for="">Fuel</label><br>
                         <select class="form-select form-select-lg text-muted mb-2" aria-label=".form-select-lg example"
@@ -114,8 +114,8 @@
                         </select>
                         
                         <label for="">How Old is Car</label><br>
-                        <input type="text" name="no_year" id="no_year" placeholder="number of years" class="text-muted mb-3" required><br>
-                        <button type="submit" class="btn btn-outline-dark" id="submit" onclick="click()">Submit</button>
+                        <input type="text" name="no_year" id="no_year" placeholder="Enter no of years like 23" class="text-muted mb-3" required><br>
+                        <button type="submit" class="btn btn-outline-dark" id="submit">Submit</button>
                         <p>{{predict}}</p>
                     
                     </p>
