--- a/template/index.html
+++ b/template/index.html
@@ -1,139 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Car Price Prediction</title>
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        
-        <!-- Style CSS -->
-        <link rel="stylesheet" href="{{url_for('static', filename= 'style2.css')}}">
-        
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="{{url_for('static', filename= 'all.css')}}">
-        
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    </head>
-    <style>
-        body {
-            font-family: "Montserrat", sans-serif;
-        }
-
-        #bg {
-            position: fixed; 
-            top: -50%; 
-            left: -50%; 
-            width: 200%; 
-            height: 200%;
-        }
-        #bg img {
-            position: absolute; 
-            top: 0; 
-            left: 0; 
-            right: 0; 
-            bottom: 0; 
-            margin: auto; 
-            min-width: 50%;
-            min-height: 50%;
-        }
-        .card{
-            position: absolute;
-            min-width: 30%;
-            top: 50px;
-            left: 20%;
-        }
-
-        input{
-            border: 1px solid black;
-            border-radius: 3px;
-            width: 85%;
-        }
-
-        input[type=text]:focus{
-            border: 1px solid lightblue;
-            outline: 1px solid lightblue;
-        }
-        
-        .form-select{
-            margin: auto;
-            width: 85%;
-            padding-top: 2.5px;
-            padding-bottom: 2.5px;
-            font-size: 16px;
-            padding-left: 3px;
-            border: 1px solid black;
-        }
-        .form-select:focus{
-            outline: none;
-            box-shadow: none;
-            border: 1px solid lightblue;
-        }
-        
-    </style>
+<head>
+	<title>Contact V4</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="static/favicon.ico">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="static/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="static/animate.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="static/hamburgers.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="static/animsition.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="static/select2.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="static/daterangepicker.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="static/util.css">
+	<link rel="stylesheet" type="text/css" href="static/main.css">
+<!--===============================================================================================-->
+</head>
 <body>
-    <div id="bg">
-        <img src="static/cars.jpg" alt="">
-      </div>
-    
-        <div class="card">
-            <div class="card-body bg-light border-bottom">
-                <h4 class="card-title text-center">Car Price Prediction</h4>
-                <form action="submit" method="POST">
-                    <p class="card-text text-center">
-                        
-                        <label for="">Year of Purchase</label><br>
-                        <input type="text" name="year" id="year" placeholder="Enter year like 2015" class="text-muted mb-2" required><br>
-                        
-                        <label for="">Showroom Price(in lakhs)</label><br>
-                        <input type="text" name="Present_Price" id="Present_Price" placeholder="Enter present price in lacs 3.4" class="text-muted mb-2" required><br>
 
-                        <label for="">Kilometers Drived</label><br>
-                        <input type="text" name="Kms_Driven" id="Kms_Driven" placeholder="Enter Km Drived like 24000" class="text-muted mb-2" required><br>
-                        
-                        <label for="">Fuel</label><br>
-                        <select class="form-select form-select-lg text-muted mb-2" aria-label=".form-select-lg example"
-                        id="Fuel_Type_Petrol" name="Fuel_Type_Petrol" required>
-                            <option value="Petrol" selected>Petrol</option>
+
+	<div class="container-contact100">
+		<div class="wrap-contact100">
+			<form action="submit" method="POST" class="contact100-form validate-form">
+				<p class="text-center text-danger" style="text-shadow: 1px 1px 4px lightpink; font-size: larger;">{{predict}}</p>
+				<span class="contact100-form-title">
+					Car Price Prediction
+				</span>
+
+				<div class="wrap-input100 validate-input" data-validate="field is required">
+					<span class="label-input100">Year of Purchase</span>
+					<input class="input100" type="text" name="year" id="year" placeholder="Enter year like 2015" required>
+					<span class="focus-input100"></span>
+				</div>
+
+                <div class="wrap-input100 validate-input" data-validate="field is required">
+					<span class="label-input100">Showroom Price(in lakhs)</span>
+					<input class="input100" type="text" name="Present_Price" id="Present_Price" placeholder="Enter present price in lacs 3.4" required>
+					<span class="focus-input100"></span>
+				</div>
+
+                <div class="wrap-input100 validate-input" data-validate="field is required">
+					<span class="label-input100">Kilometers Drived</span>
+					<input class="input100" type="text" name="Kms_Driven" id="Kms_Driven" placeholder="Enter Km Drived like 24000" required>
+					<span class="focus-input100"></span>
+				</div>
+
+				<div class="wrap-input100 input100-select">
+					<span class="label-input100">Fuel</span>
+					<div>
+						<select class="selection-2" id="Fuel_Type_Petrol" name="Fuel_Type_Petrol">
+							<option value="Petrol" selected>Petrol</option>
                             <option value="Diesel">Diesel</option>
                             <option value="Cng">CNG</option>
-                        </select>
-                        
-                        <label for="">Owner Type</label><br>
-                        <select class="form-select form-select-lg text-muted mb-2" aria-label=".form-select-lg example" id="Seller_Type_Individual" name="Seller_Type_Individual" required>
-                            <option value="Dealer" selected>Dealer</option>
+						</select>
+					</div>
+					<span class="focus-input100"></span>
+				</div>
+
+				<div class="wrap-input100 input100-select">
+					<span class="label-input100">Owner Type</span>
+					<div>
+						<select class="selection-2" id="Seller_Type_Individual" name="Seller_Type_Individual">
+							<option value="Dealer" selected>Dealer</option>
                             <option value="Indivaidual">Individual</option> 
-                        </select>
-                        
-                        <label for="">Transmission Type</label><br>
-                        <select class="form-select form-select-lg text-muted mb-2" aria-label=".form-select-lg example" id="Transmission_Manual"   name="Transmission_Manual" required>
-                            <option value="Petrol" selected>Mannual Car</option>
+						</select>
+					</div>
+					<span class="focus-input100"></span>
+				</div>
+
+                <div class="wrap-input100 input100-select">
+					<span class="label-input100">Transmission Type</span>
+					<div>
+						<select class="selection-2" id="Transmission_Manual" name="Transmission_Manual">
+							<option value="Petrol" selected>Mannual Car</option>
                             <option value="Diesel">Automatic Car</option>
-                        </select>
-                        
-                        <label for="">How Old is Car</label><br>
-                        <input type="text" name="no_year" id="no_year" placeholder="Enter no of years like 23" class="text-muted mb-3" required><br>
-                        <button type="submit" class="btn btn-outline-dark" id="submit">Submit</button>
-                        <p>{{predict}}</p>
-                    
-                    </p>
-                </form>
-            </div>
-        </div>
-    
-    <!-- Script Source Files -->
+						</select>
+					</div>
+					<span class="focus-input100"></span>
+				</div>
+                
+                <div class="wrap-input100 validate-input" data-validate="field is required">
+					<span class="label-input100">How Old is Car</span>
+					<input class="input100" type="text" name="no_year" id="no_year" placeholder="Enter no of years like 23" required>
+					<span class="focus-input100"></span>
+				</div>
 
-	<!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+				<div class="container-contact100-form-btn">
+					<div class="wrap-contact100-form-btn">
+						<div class="contact100-form-bgbtn"></div>
+						<button class="contact100-form-btn" type="submit" id="submit" data-target="#exampleModalCenter" data-toggle="modal">
+							<span>
+								Submit
+                                
+                                <i class="fa m-l-7" aria-hidden="true">-</i>
+							</span>
+						</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+
+	<div id="dropDownSelect1"></div>
+
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-	<!-- End Script Source Files -->
+
+
+<!--===============================================================================================-->
+	<script src="static/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+	<script src="static/animsition.min.js"></script>
+<!--===============================================================================================-->
+	<script src="static/popper.js"></script>
+	<script src="static/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+	<script src="static/select2.min.js"></script>
+	<script>
+		$(".selection-2").select2({
+			minimumResultsForSearch: 20,
+			dropdownParent: $('#dropDownSelect1')
+		});
+	</script>
+<!--===============================================================================================-->
+	<script src="vendor/daterangepicker/moment.min.js"></script>
+	<script src="vendor/daterangepicker/daterangepicker.js"></script>
+<!--===============================================================================================-->
+	<script src="vendor/countdowntime/countdowntime.js"></script>
+<!--===============================================================================================-->
+	<script src="js/main.js"></script>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-23581568-13');
+</script>
+
 </body>
 </html>
