--- a/template/index.html
+++ b/template/index.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Contact V4</title>
+	<title>Car price Prediction</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="static/favicon.ico">
+
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="static/font-awesome.min.css">
+
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="static/animate.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="static/hamburgers.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="static/animsition.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="static/select2.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="static/daterangepicker.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="static/util.css">
+	
 	<link rel="stylesheet" type="text/css" href="static/main.css">
 <!--===============================================================================================-->
 
@@ -61,7 +50,7 @@
 
                 <div class="wrap-input100 validate-input" data-validate="field is required">
 					<span class="label-input100">Showroom Price(in lakhs)</span>
-					<input class="input100" type="text" name="Present_Price" id="Present_Price" placeholder="Enter present price in lacs 3.4" required>
+					<input class="input100" type="text" name="Present_Price" id="Present_Price" placeholder="Enter present price in lacs like 3.4" required>
 					<span class="focus-input100"></span>
 				</div>
 
@@ -131,41 +120,7 @@
 
 	<div id="dropDownSelect1"></div>
 
-    
 
-
-<!--===============================================================================================-->
-	<script src="static/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-	<script src="static/animsition.min.js"></script>
-<!--===============================================================================================-->
-	<script src="static/popper.js"></script>
-	<script src="static/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-	<script src="static/select2.min.js"></script>
-	<script>
-		$(".selection-2").select2({
-			minimumResultsForSearch: 20,
-			dropdownParent: $('#dropDownSelect1')
-		});
-	</script>
-<!--===============================================================================================-->
-	<script src="vendor/daterangepicker/moment.min.js"></script>
-	<script src="vendor/daterangepicker/daterangepicker.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/countdowntime/countdowntime.js"></script>
-<!--===============================================================================================-->
-	<script src="js/main.js"></script>
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-23581568-13');
-</script>
 
 </body>
 </html>
