--- a/template/index.html
+++ b/template/index.html
@@ -23,6 +23,7 @@
             font-size: 16px;
             padding-left: 3px;
             border: 1px solid white;
+            background-color: white;
         }
         .form-select:focus{
             outline: none;
